downgrade version 7.3.0 to 7.2.2

--- a/settings.gradle
+++ b/settings.gradle
@@ -13,5 +13,5 @@ dependencyResolutionManagement {
         maven { url 'https://jitpack.io' }
     }
 }
-rootProject.name = "mCn-Template"
+rootProject.name = "CookApp"
 include ':app'
